--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -32,6 +32,7 @@ jobs:
           zip -r Bestdori-Music-Downloader-UTF8-$GITHUB_EVENT_INPUTS_RELEASEVERSION.zip bmd.ps1 README.md
 
       - name: Create release
+        id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
