--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -9,54 +9,168 @@ on:
         default: 'v.'
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-taglibsharp:
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        repository: 'mono/taglib-sharp'
+        fetch-depth: '1'
+
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 6.0.302
+
+    - name: Clean
+      run: dotnet clean --configuration Release && dotnet nuget locals all --clear
+
+    - name: Build with dotnet
+      run: dotnet build --configuration Release
+
+    - name: Run unit tests
+      run: dotnet test --verbosity normal
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: taglibsharp.dll
+        path: src/TaglibSharp/bin/Release/netstandard2.0/TagLibSharp.dll
+
+  pack-utf8:
+    runs-on: ubuntu-latest
+    needs: build-taglibsharp
+    steps:
+      - uses: actions/checkout@v3
 
       - name: Install environment
         run: sudo apt install -y tofrodos zip
 
+      - uses: actions/download-artifact@v3
+        with:
+          name: taglibsharp.dll
+
       - name: Pack script to zip
         run: |
           todos bmd.ps1
-          zip -r Bestdori-Music-Downloader-${{ github.event.inputs.releaseVersion }}.zip bmd.ps1 README.md
+          zip -r Bestdori-Music-Downloader-CRLF-UTF-8-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
 
-      - name: Transcode to UTF-8 and pack script to zip
+      - name: Upload zip file
+        uses: actions/upload-artifact@v3
+        with:
+          name: Bestdori-Music-Downloader-CRLF-UTF-8-Build${{ github.run_number }}
+          path: Bestdori-Music-Downloader-CRLF-UTF-8-${{ github.run_number }}.zip
+
+  pack-gbk:
+    runs-on: ubuntu-latest
+    needs: build-taglibsharp
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install environment
+        run: sudo apt install -y tofrodos zip
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: taglibsharp.dll
+
+      - name: Pack script to zip
         run: |
-          iconv -f gbk -t utf-8 bmd.ps1 > bmd.utf8.ps1
-          rm -rf bmd.ps1
-          mv bmd.utf8.ps1 bmd.ps1
           todos bmd.ps1
-          zip -r Bestdori-Music-Downloader-UTF8-${{ github.event.inputs.releaseVersion }}.zip bmd.ps1 README.md
+          iconv -f utf-8 -t gbk -o bmd.ps1
+          zip -r Bestdori-Music-Downloader-CRLF-GBK-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
 
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload zip file
+        uses: actions/upload-artifact@v3
         with:
+          name: Bestdori-Music-Downloader-CRLF-GBK-Build${{ github.run_number }}
+          path: Bestdori-Music-Downloader-CRLF-GBK-${{ github.run_number }}.zip
+
+  pack-shiftjis:
+    runs-on: ubuntu-latest
+    needs: build-taglibsharp
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install environment
+        run: sudo apt install -y tofrodos zip
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: taglibsharp.dll
+
+      - name: Pack script to zip
+        run: |
+          todos bmd.ps1
+          iconv -f utf-8 -t shift-jis -o bmd.ps1
+          zip -r Bestdori-Music-Downloader-CRLF-SHIFT-JIS-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
+
+      - name: Upload zip file
+        uses: actions/upload-artifact@v3
+        with:
+          name: Bestdori-Music-Downloader-CRLF-SHIFT-JIS-Build${{ github.run_number }}
+          path: Bestdori-Music-Downloader-CRLF-SHIFT-JIS-${{ github.run_number }}.zip
+
+  pack-euckr:
+    runs-on: ubuntu-latest
+    needs: build-taglibsharp
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install environment
+        run: sudo apt install -y tofrodos zip
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: taglibsharp.dll
+
+      - name: Pack script to zip
+        run: |
+          todos bmd.ps1
+          iconv -f utf-8 -t euc-kr -o bmd.ps1
+          zip -r Bestdori-Music-Downloader-CRLF-EUC-KR-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
+
+      - name: Upload zip file
+        uses: actions/upload-artifact@v3
+        with:
+          name: Bestdori-Music-Downloader-CRLF-EUC-KR-Build${{ github.run_number }}
+          path: Bestdori-Music-Downloader-CRLF-EUC-KR-${{ github.run_number }}.zip
+
+  upload-nightly:
+    permissions:
+      contents: write
+    needs:
+      - pack-utf8
+      - pack-gbk
+      - pack-shiftjis
+      - pack-euckr
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download UTF-8 artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Bestdori-Music-Downloader-CRLF-UTF-8-Build${{ github.run_number }}
+
+      - name: Download GBK artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Bestdori-Music-Downloader-CRLF-GBK-Build${{ github.run_number }}
+
+      - name: Download SHIFT-JIS artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Bestdori-Music-Downloader-CRLF-SHIFT-JIS-Build${{ github.run_number }}
+
+      - name: Download EUC-KR artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: Bestdori-Music-Downloader-CRLF-EUC-KR-Build${{ github.run_number }}
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          name: Bestdori Music Downloader ${{ github.event.inputs.releaseVersion }}
           tag_name: ${{ github.event.inputs.releaseVersion }}
-          release_name: Bestdori Music Downloader ${{ github.event.inputs.releaseVersion }}
-          draft: false
-          prerelease: false
-
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./Bestdori-Music-Downloader-${{ github.event.inputs.releaseVersion }}.zip
-          asset_name: Bestdori-Music-Downloader-${{ github.event.inputs.releaseVersion }}.zip
-          asset_content_type: application/zip
-
-      - name: Upload UTF-8 release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./Bestdori-Music-Downloader-UTF8-${{ github.event.inputs.releaseVersion }}.zip
-          asset_name: Bestdori-Music-Downloader-UTF8-${{ github.event.inputs.releaseVersion }}.zip
-          asset_content_type: application/zip
+          token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            Bestdori-Music-Downloader*.zip
