edit iconv command args

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Pack script to zip
         run: |
           todos bmd.ps1
-          iconv -f utf-8 -t gbk -o bmd.ps1
+          iconv bmd.ps1 -f utf-8 -t gbk -o bmd.ps1
           zip -r Bestdori-Music-Downloader-CRLF-GBK-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
 
       - name: Upload zip file
@@ -102,7 +102,7 @@ jobs:
       - name: Pack script to zip
         run: |
           todos bmd.ps1
-          iconv -f utf-8 -t shift-jis -o bmd.ps1
+          iconv bmd.ps1 -f utf-8 -t shift-jis -o bmd.ps1
           zip -r Bestdori-Music-Downloader-CRLF-SHIFT-JIS-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
 
       - name: Upload zip file
@@ -127,7 +127,7 @@ jobs:
       - name: Pack script to zip
         run: |
           todos bmd.ps1
-          iconv -f utf-8 -t euc-kr -o bmd.ps1
+          iconv bmd.ps1 -f utf-8 -t euc-kr -o bmd.ps1
           zip -r Bestdori-Music-Downloader-CRLF-EUC-KR-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
 
       - name: Upload zip file
@@ -136,7 +136,7 @@ jobs:
           name: Bestdori-Music-Downloader-CRLF-EUC-KR-Build${{ github.run_number }}
           path: Bestdori-Music-Downloader-CRLF-EUC-KR-${{ github.run_number }}.zip
 
-  upload-nightly:
+  upload-release:
     permissions:
       contents: write
     needs:
