--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -77,8 +77,8 @@ jobs:
       - name: Pack script to zip
         run: |
           todos bmd.ps1
-          iconv bmd.ps1 -f utf-8 -t gbk -o bmd.ps1
-          zip -r Bestdori-Music-Downloader-CRLF-GBK-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
+          iconv -c -f utf-8 -t gbk bmd.ps1>bmd.gbk.ps1
+          zip -r Bestdori-Music-Downloader-CRLF-GBK-$GITHUB_RUN_NUMBER.zip bmd.gbk.ps1 README.md TagLibSharp.dll
 
       - name: Upload zip file
         uses: actions/upload-artifact@v3
@@ -102,8 +102,8 @@ jobs:
       - name: Pack script to zip
         run: |
           todos bmd.ps1
-          iconv bmd.ps1 -f utf-8 -t shift-jis -o bmd.ps1
-          zip -r Bestdori-Music-Downloader-CRLF-SHIFT-JIS-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
+          iconv -c -f utf-8 -t shift-jis bmd.ps1>bmd.jis.ps1
+          zip -r Bestdori-Music-Downloader-CRLF-SHIFT-JIS-$GITHUB_RUN_NUMBER.zip bmd.jis.ps1 README.md TagLibSharp.dll
 
       - name: Upload zip file
         uses: actions/upload-artifact@v3
@@ -127,8 +127,8 @@ jobs:
       - name: Pack script to zip
         run: |
           todos bmd.ps1
-          iconv bmd.ps1 -f utf-8 -t euc-kr -o bmd.ps1
-          zip -r Bestdori-Music-Downloader-CRLF-EUC-KR-$GITHUB_RUN_NUMBER.zip bmd.ps1 README.md TagLibSharp.dll
+          iconv -c -f utf-8 -t euc-kr bmd.ps1>bmd.kr.ps1
+          zip -r Bestdori-Music-Downloader-CRLF-EUC-KR-$GITHUB_RUN_NUMBER.zip bmd.kr.ps1 README.md TagLibSharp.dll
 
       - name: Upload zip file
         uses: actions/upload-artifact@v3
