--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -37,14 +37,14 @@ jobs:
         name: taglibsharp.dll
         path: src/TaglibSharp/bin/Release/netstandard2.0/TagLibSharp.dll
 
-  pack-utf8:
+  pack:
     runs-on: ubuntu-latest
     needs: build-taglibsharp
     steps:
       - uses: actions/checkout@v3
 
       - name: Install environment
-        run: sudo apt install -y tofrodos zip
+        run: sudo apt install -y zip
 
       - uses: actions/download-artifact@v3
         with:
@@ -52,8 +52,10 @@ jobs:
 
       - name: Pack script to zip
         run: |
-          todos bmd.ps1
-          zip -r Bestdori-Music-Downloader-CRLF-UTF-8-${{ github.event.inputs.releaseVersion }}.zip bmd.ps1 README.md TagLibSharp.dll
+          zip -r -l -9 Bestdori-Music-Downloader-CRLF-UTF-8-${{ github.event.inputs.releaseVersion }}.zip bmd.ps1 README.md Localized
+          zip -r -9 Bestdori-Music-Downloader-CRLF-UTF-8-${{ github.event.inputs.releaseVersion }}.zip TagLibSharp.dll
+          zip -r -9 Bestdori-Music-Downloader-LF-UTF-8-${{ github.event.inputs.releaseVersion }}.zip bmd.ps1 README.md Localized
+          zip -r -9 Bestdori-Music-Downloader-LF-UTF-8-${{ github.event.inputs.releaseVersion }}.zip TagLibSharp.dll
 
       - name: Upload zip file
         uses: actions/upload-artifact@v3
@@ -61,110 +63,17 @@ jobs:
           name: Bestdori-Music-Downloader-CRLF-UTF-8-Build${{ github.event.inputs.releaseVersion }}
           path: Bestdori-Music-Downloader-CRLF-UTF-8-${{ github.event.inputs.releaseVersion }}.zip
 
-  pack-gbk:
-    runs-on: ubuntu-latest
-    needs: build-taglibsharp
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install environment
-        run: sudo apt install -y tofrodos zip
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: taglibsharp.dll
-
-      - name: Pack script to zip
-        run: |
-          todos bmd.ps1
-          iconv -c -f utf-8 -t gbk bmd.ps1>bmd.gbk.ps1
-          zip -r Bestdori-Music-Downloader-CRLF-GBK-${{ github.event.inputs.releaseVersion }}.zip bmd.gbk.ps1 README.md TagLibSharp.dll
-
-      - name: Upload zip file
-        uses: actions/upload-artifact@v3
-        with:
-          name: Bestdori-Music-Downloader-CRLF-GBK-Build${{ github.event.inputs.releaseVersion }}
-          path: Bestdori-Music-Downloader-CRLF-GBK-${{ github.event.inputs.releaseVersion }}.zip
-
-  pack-shiftjis:
-    runs-on: ubuntu-latest
-    needs: build-taglibsharp
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install environment
-        run: sudo apt install -y tofrodos zip
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: taglibsharp.dll
-
-      - name: Pack script to zip
-        run: |
-          todos bmd.ps1
-          iconv -c -f utf-8 -t shift-jis bmd.ps1>bmd.jis.ps1
-          zip -r Bestdori-Music-Downloader-CRLF-SHIFT-JIS-${{ github.event.inputs.releaseVersion }}.zip bmd.jis.ps1 README.md TagLibSharp.dll
-
-      - name: Upload zip file
-        uses: actions/upload-artifact@v3
-        with:
-          name: Bestdori-Music-Downloader-CRLF-SHIFT-JIS-Build${{ github.event.inputs.releaseVersion }}
-          path: Bestdori-Music-Downloader-CRLF-SHIFT-JIS-${{ github.event.inputs.releaseVersion }}.zip
-
-  pack-euckr:
-    runs-on: ubuntu-latest
-    needs: build-taglibsharp
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install environment
-        run: sudo apt install -y tofrodos zip
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: taglibsharp.dll
-
-      - name: Pack script to zip
-        run: |
-          todos bmd.ps1
-          iconv -c -f utf-8 -t euc-kr bmd.ps1>bmd.kr.ps1
-          zip -r Bestdori-Music-Downloader-CRLF-EUC-KR-${{ github.event.inputs.releaseVersion }}.zip bmd.kr.ps1 README.md TagLibSharp.dll
-
-      - name: Upload zip file
-        uses: actions/upload-artifact@v3
-        with:
-          name: Bestdori-Music-Downloader-CRLF-EUC-KR-Build${{ github.event.inputs.releaseVersion }}
-          path: Bestdori-Music-Downloader-CRLF-EUC-KR-${{ github.event.inputs.releaseVersion }}.zip
-
   upload-release:
     permissions:
       contents: write
     needs:
-      - pack-utf8
-      - pack-gbk
-      - pack-shiftjis
-      - pack-euckr
+      - pack
     runs-on: ubuntu-latest
     steps:
-      - name: Download UTF-8 artifact
+      - name: Download artifact
         uses: actions/download-artifact@v3
         with:
           name: Bestdori-Music-Downloader-CRLF-UTF-8-Build${{ github.event.inputs.releaseVersion }}
-
-      - name: Download GBK artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: Bestdori-Music-Downloader-CRLF-GBK-Build${{ github.event.inputs.releaseVersion }}
-
-      - name: Download SHIFT-JIS artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: Bestdori-Music-Downloader-CRLF-SHIFT-JIS-Build${{ github.event.inputs.releaseVersion }}
-
-      - name: Download EUC-KR artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: Bestdori-Music-Downloader-CRLF-EUC-KR-Build${{ github.event.inputs.releaseVersion }}
 
       - name: Release
         uses: softprops/action-gh-release@v1
